---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/line_ranges_fmt_off_decorator.py
---
## Input

```python
# flags: --line-ranges=12-12
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.

# Regression test for an edge case involving decorators and fmt: off/on.
class MyClass:

    # fmt: off
    @decorator  (  )
    # fmt: on
    def method():
        print   ( "str" )
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -4,9 +4,8 @@
 
 # Regression test for an edge case involving decorators and fmt: off/on.
 class MyClass:
-
     # fmt: off
     @decorator  (  )
     # fmt: on
     def method():
-        print("str")
+        print   ( "str" )
```

## Ruff Output

```python
# flags: --line-ranges=12-12
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.

# Regression test for an edge case involving decorators and fmt: off/on.
class MyClass:
    # fmt: off
    @decorator  (  )
    # fmt: on
    def method():
        print   ( "str" )
```

## Black Output

```python
# flags: --line-ranges=12-12
# NOTE: If you need to modify this file, pay special attention to the --line-ranges=
# flag above as it's formatting specifically these lines.

# Regression test for an edge case involving decorators and fmt: off/on.
class MyClass:

    # fmt: off
    @decorator  (  )
    # fmt: on
    def method():
        print("str")
```


